force-app/main/default/objects/Account/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <description>This field is to store NPI number</description>
    <label>NPI Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>