force-app/main/default/objects/Account/fields/Onco_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Onco_Patient_ID__c</fullName>
    <displayFormat>PAT-{0000}</displayFormat>
    <label>Patient ID</label>
    <type>AutoNumber</type>
</CustomField>