force-app/main/default/objects/Account/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>This is used to store the Hcp&apos;s specialty information</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General Medicine</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Gynecology</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>Medical Oncology</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Pediatric Oncology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Pulmonology</fullName>
            </value>
            <value>
                <fullName>Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Rheumatology</fullName>
            </value>
            <value>
                <fullName>Surgical Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>