force-app/main/default/objects/Account/recordTypes/HCO.recordType-meta.xml
<RecordType>
    <fullName>HCO</fullName>
    <active>true</active>
    <description>This is the Account record Type for Hospitals</description>
    <label>HCO</label>
</RecordType>